--- a/config.conf
+++ b/config.conf
@@ -1,8 +1,16 @@
 [global]
 logpath = /var/log/apache2/access.log
 
+[logging]
+file = /tmp/noskiddie.log
+level = DEBUG
+format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
+when = d
+interval = 1
+backupcount = 5
+
 [smtp]
-enabled = true
+enabled = false
 server = smtp.google.com
 port = 587
 from = xxxx@xxx
